--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="code.js"></script>
+
 </head>
 <body>
-    
+    <div class="container"></div>
+
+    <script src="code.js" defer></script>
 </body>
 </html>
